# sdf

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.ac  install.sh  meson.build  reconf  sdf2-bundle.pc.in  sdf2-bundle.spec  sdf2-bundle.spec.in
asc-support/: ChangeLog  Makefile.in  configure  configure.ac
asc-support/lib/: Makefile.am  Makefile.in  asc-builtins.h  asc-main.c  asc-muasf2pt.c  asc-nametable.c  asc-support.c  builtin-forward.c  builtin-link-test.c
asc-support/utils/: Makefile.in  gen-forward.sh  gen-link-test.sh  gen-protos.sh
asf-support/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac
asf-support/lib/: Makefile.am  Makefile.in
error-support/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
error-support/doc/: Makefile.in
error-support/lib/: Makefile.am  Makefile.in  manager.c
error-support/utils/: Makefile.in
error-support/utils/error-diff/: Makefile.in  error-diff.c
error-support/utils/lift-error/: Makefile.am  Makefile.in  lift-error.c
error-support/utils/lower-error/: Makefile.in  lower-error.c
pgen/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac
pgen/grammar/: Makefile.in  Sdf2.def
pgen/removevarsyntax/: Makefile.am  Makefile.in
pgen/removevarsyntax/src/: Makefile.in
pgen/sdf-checker/: Makefile.am  Makefile.in
pgen/sdf-checker/src/: Makefile.am  Makefile.in
pgen/src/: Makefile.in  characters.c  characters.h  follow.c  intset.c  ksdf2table.c  sdf2table.src
pgen/test/: Makefile.am  Makefile.in  regress-lang.sh.src  regress-terms.sh.src
pgen/test/erroneous/: Makefile.am  Makefile.in
pgen/test/grammars/: Flat.sdf  Makefile.am  Makefile.in
pgen/test/tables/: Makefile.in
pgen/test/terms/: Makefile.am  Makefile.in
pt-support/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  meta-build.m4
pt-support/libmept/: MEPT-posinfo.c  Makefile.am  Makefile.in
pt-support/libptmept/: Makefile.am  Makefile.in
pt-support/test/: Makefile.am  Makefile.in  mept-test.c
pt-support/test/terms/: Makefile.in
pt-support/utils/: Makefile.am  Makefile.in  addPosInfo.c  ambtracker-main.c  apply-function.c  flattenPT-main.c  liftPT-main.c  unparseProd-main.c  unparser.idef.src
pt-support/utils/filterPT/: Makefile.in
pt-support/utils/filterPT/test/: Makefile.in
pt-support/utils/implodePT/: Makefile.am  Makefile.in  implodePT-main.c
sdf-library/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
sdf-support/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac
sdf-support/lib/: Makefile.am  Makefile.in  Sdf.label.def  pt2sdf.c
sdf-support/test/: Makefile.am  Makefile.in  pt2sdf-test.c
sdf-support/utils/: Makefile.in
sdf-support/utils/sdf-modules/: Makefile.in
sdf-support/utils/sdf-renaming/: Makefile.am  Makefile.in
sglr/: ChangeLog  Makefile.am  Makefile.in  NEWS  configure  configure.ac
sglr/doc/: Makefile.am  Makefile.in
sglr/dump/: Makefile.am  Makefile.in  dump-actions.c  dump-gotos.c  dump-priorities.c  dump-productions.c  dump-skel.c  dump-skel.h
sglr/libsglr/: Makefile.am  Makefile.in  forest.c  parse-table.c  parser.c  rsrc-usage.c  sglr-interface.c  sglr.h  stack.c
sglr/restorebrackets/: Makefile.am  Makefile.in
sglr/restorebrackets/src/: Makefile.am  Makefile.in
sglr/sglr/: Makefile.am  Makefile.in  sglr-main.c
sglr/test/: Makefile.am  Makefile.in  regress-terms.sh.src
sglr/test/erroneous/: Makefile.am  Makefile.in
sglr/test/tables/: Makefile.am  Makefile.in
sglr/test/terms/: Makefile.am  Makefile.in
src/: AUTHORS  meson.build
src/asc-support/lib/: Library.c  Library.h  asc-client.c  asc-main.c  asc-support-me.h  asc-termstore.c  builtin-common.h  builtin-forward.c  builtin-io.c  builtin-term-compare.c  builtin-tide.c
src/asf-support/lib/: ASFME-utils.h  ASFME.c  ASFME.h  lift.c  lower.c
src/c-library/: ChangeLog
src/config-support/: ChangeLog
src/config-support/lib/: Config.c
src/error-support/lib/: Error-utils.c  Error-utils.h  Error.c  Error.h  Location.c  ParsedError.c  ParsedError.h  ParsedLocation.c  ParsedLocation.h  manager.c
src/pgen/: meson.build
src/pgen/src/: ksdf2table.c  parseTable-stats.h
src/pgen/test/: loadTests.sh.src  regressionTests.sh.src
src/pt-support/libmept/: MEPT-ambtracker.c  MEPT-annotations.c  MEPT-annotations.h  MEPT-apply.c  MEPT-apply.h  MEPT-args.c  MEPT-args.h  MEPT-characters.c  MEPT-flatten.c  MEPT-flatten.h  MEPT-implode.c  MEPT-implode.h  MEPT-layout.c  MEPT-layout.h  MEPT-length.c  MEPT-length.h  MEPT-ordering.c  MEPT-ordering.h  MEPT-origins.c  MEPT-origins.h  MEPT-posinfo.c  MEPT-posinfo.h  MEPT-productions.c  MEPT-productions.h  MEPT-renaming.c  MEPT-renaming.h  MEPT-start.c  MEPT-start.h  MEPT-symbols.c  MEPT-symbols.h  MEPT-tree.c  MEPT-tree.h  MEPT-visitors.c  MEPT-visitors.h  MEPT-yield.c  MEPT-yield.h  MEPT-yieldprod.h  MEPT.c  MEPT.h
src/pt-support/libptmept/: PTMEPT-utils.h  PTMEPT.h
src/pt-support/test/terms/: genTermsDict.sh.src
src/ptable-support/lib/: ptable-utils.c  ptable-utils.h  ptable.c  ptable.h
src/rstore-support/lib/: ParsedRStore.c  ParsedRStore.h  RStore.c  RStore.h  lift.c  lower.c
src/sdf-library/: meson.build
src/sdf-support/lib/: SDFME.h
src/sglr/: AUTHORS  ChangeLog  NEWS  README
src/sglr/src/: commandLineInterface.c  inputString-api.h  main.c  sglr.h  sglrInterface.c  sglrInterface.h  toolbusInterface.c
src/sglr/src/gss/: gss.c  gss.h  gssEdge.c  gssEdgeList.h  gssNode-api.h  gssNode.c  gssNodeList.h  reductionPath.c  shiftQueue.c
src/sglr/src/parseForest/: ambi-tables.c  ambi-tables.h  filters.c  filters.h
src/sglr/src/parseTable/: parseTable.c  parseTable.h  parseTableBuilder.c  parseTableDB.c
src/sglr/src/parser/: parser.c  parser.h
src/sglr/test/: regressionTests.sh.src
src/tide-support/lib/: TA.c  TA.h
tide-support/: Makefile.in  configure
tide-support/lib/: Makefile.in
toolbuslib/: ChangeLog  Makefile.in  configure
toolbuslib/src/: Makefile.am  Makefile.in  atb-tool.c
(+14 files in other folders)
