# Parser
# ============================================================================

libsglr_sources = files(
    'c-library/logging/logging.c',
    'c-library/statistics/rsrc-usage.c',
    'toolbuslib/src/atb-tool.c',
    'config-support/lib/Config.c',
    'config-support/lib/Config_dict.c',
    'config-support/lib/options.c',
    'error-support/lib/Error.c',
    'error-support/lib/Error_dict.c',
    'error-support/lib/ParsedError.c',
    'error-support/lib/ParsedError_dict.c',
    'error-support/lib/init.c',
    'error-support/lib/display.c',
    'error-support/lib/lift.c',
    'error-support/lib/lower.c',
    'error-support/lib/manager.c',
    'error-support/lib/Error-utils.c',
    'error-support/lib/Location.c',
    'error-support/lib/Location_dict.c',
    'error-support/lib/ParsedLocation.c',
    'error-support/lib/ParsedLocation_dict.c',
    'pt-support/libmept/MEPT.c',
    'pt-support/libmept/MEPT_dict.c',
    'pt-support/libmept/MEPT-ambtracker.c',
    'pt-support/libmept/MEPT-annotations.c',
    'pt-support/libmept/MEPT-apply.c',
    'pt-support/libmept/MEPT-args.c',
    'pt-support/libmept/MEPT-characters.c',
    'pt-support/libmept/MEPT-flatten.c',
    'pt-support/libmept/MEPT-implode.c',
    'pt-support/libmept/MEPT-layout.c',
    'pt-support/libmept/MEPT-length.c',
    'pt-support/libmept/MEPT-ordering.c',
    'pt-support/libmept/MEPT-origins.c',
    'pt-support/libmept/MEPT-posinfo.c',
    'pt-support/libmept/MEPT-productions.c',
    'pt-support/libmept/MEPT-renaming.c',
    'pt-support/libmept/MEPT-start.c',
    'pt-support/libmept/MEPT-symbols.c',
    'pt-support/libmept/MEPT-tree.c',
    'pt-support/libmept/MEPT-visitors.c',
    'pt-support/libmept/MEPT-yield.c',
    'pt-support/libmept/MEPT-yieldprod.c',
    'pt-support/libptmept/PTMEPT.c',
    'pt-support/libptmept/PTMEPT_dict.c',
    'pt-support/libptmept/lift.c',
    'pt-support/libptmept/lower.c',
    'ptable-support/lib/ptable.c',
    'ptable-support/lib/ptable_dict.c',
    'ptable-support/lib/ptable-utils.c',
    'sglr/src/sglrInterface.c',
    'sglr/src/mainOptions.c',
    'sglr/src/inputString.c',
    'sglr/src/inputStringBuilder.c',
    'sglr/src/sglr-termstore.c',
    'sglr/src/gss/gssNodeList.c',
    'sglr/src/gss/gssEdgeList.c',
    'sglr/src/gss/gssNode.c',
    'sglr/src/gss/gssEdge.c',
    'sglr/src/gss/gss.c',
    'sglr/src/gss/gssGarbageCollector.c',
    'sglr/src/gss/reductionPath.c',
    'sglr/src/gss/shiftQueue.c',
    'sglr/src/parseForest/filters.c',
    'sglr/src/parseForest/ambi-tables.c',
    'sglr/src/parseForest/filterOptions.c',
    'sglr/src/parseForest/levels.c',
    'sglr/src/parseTable/parseTable.c',
    'sglr/src/parseTable/parseTableBuilder.c',
    'sglr/src/parseTable/parseTableDB.c',
    'sglr/src/parser/parser.c',
    'sglr/src/parser/parserStatistics.c',
    'sglr/src/parser/parserOptions.c',
    'sglr/src/utils/bitmap.c',
    'sglr/src/utils/marking.c',
    'sglr/src/utils/posmap.c',
    'sglr/src/utils/list.c',
    'sglr/src/utils/statusBar.c')

sglr_library = library(
  'sglr',
  libsglr_sources,
  # TODO
  include_directories : [
    'pt-support/libmept',
    'ptable-support/lib',
    'config-support/lib',
    'toolbuslib/src',
    'error-support/lib',
    'c-library/statistics',
    'sglr/src'],
  link_args : ['-Wl,-no-undefined'],
  dependencies : [aterm],
  install: true)

sglr_exe = executable('sglr', [
    'sglr/src/main.c',
    'sglr/src/sglr.c',
    'sglr/src/toolbusInterface.c', 'sglr/src/commandLineInterface.c'],
  include_directories : [
    'pt-support/libmept',
    'ptable-support/lib',
    'config-support/lib',
    'toolbuslib/src',
    'error-support/lib',
    'c-library/statistics',
    'sglr/src'],
    dependencies : [aterm],
    link_with : [sglr_library],
    install: true,
    # TODO
    install_rpath : '/opt/stratego/lib/x86_64-linux-gnu/')

# Parser generator
# ============================================================================

libsglr_pgen_sources = files(
	  'asf-support/lib/ASFME.c',
    'asf-support/lib/ASFME_dict.c',
    'asf-support/lib/ASFME-utils.c',
    'asf-support/lib/lift.c',
    'asf-support/lib/lower.c',
    'sdf-support/lib/SDFME.c',
    'sdf-support/lib/SDFME_dict.c',
    'sdf-support/lib/SDFME-utils.c',
    'sdf-support/lib/get-module-name.c',
    'sdf-support/lib/grammar.c',
    'sdf-support/lib/prio.c',
    'sdf-support/lib/prod.c',
    'sdf-support/lib/restrict.c',
    'sdf-support/lib/import-operations.c',
    'sdf-support/lib/sort.c')

sglr_pgen_library = library(
  'sglr-parser-generator',
  libsglr_pgen_sources,
  include_directories : [
    'pt-support/libmept',
    'pt-support/libptmept',
    # 'config-support/lib',
    # 'toolbuslib/src',
    # 'error-support/lib',
    # 'c-library/statistics',
    # 'sglr/src'
    ],
  link_args : ['-Wl,-no-undefined'],
  dependencies : [aterm],
  link_with : [sglr_library],
  install: true)
